--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "dev": "nodemon api/index.js",
     "start": "node api/index.js"
   },
-  "keywords": [],
+  "keywords": [], 
   "author": "",
-  "license": "ISC",
+  "license": "ISC", 
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "nodemon": "^3.1.4"
   }
 }
